Add jvm argument --add-modules java.xml.bind when java version is 9. Fix for Microsoft/team-explorer-everywhere#237